option(PL_BITORDER_PROPAGATION "PL_BITORDER_PROPAGATION" OFF)
if(PL_BITORDER_PROPAGATION OR BUILD_ALL_PLUGINS)
    file(GLOB_RECURSE BITORDER_PROPAGATION_INC ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)
    file(GLOB_RECURSE BITORDER_PROPAGATION_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
    file(GLOB_RECURSE BITORDER_PROPAGATION_PYTHON_SRC ${CMAKE_CURRENT_SOURCE_DIR}/python/*.cpp)

    hal_add_plugin(bitorder_propagation
                   SHARED
                   HEADER ${BITORDER_PROPAGATION_INC}
                   SOURCES ${BITORDER_PROPAGATION_SRC} ${BITORDER_PROPAGATION_PYTHON_SRC}
                   )
endif()
